#328 Ensure that all service methods declare TradistaBusinessException when it is thrown by their interceptors